# weiss-schwarz-dsl

./: Cargo.toml  LICENSE.md  defines.w  externs.w  saved.w  todo.txt
rules/: Cargo.toml
rules/src/: executor.rs  lib.rs  model.rs  parsing.rs
rules/src/executor/: bytecode.rs  code_generation.rs  error.rs  new_code_gen.rs  rust_funcs.rs  semantic_analysis.rs  value.rs
rules/src/executor/semantic_analysis/: arg_length.rs  constraints.rs  hm.rs  symbol_validity.rs  type_check.rs
rules/src/executor/semantic_analysis/hm/: fresh.rs  substitution.rs  type_environment.rs  type_schemes.rs  type_tree.rs  types.rs  unify.rs
rules/src/model/: model_ref.rs
rules/src/parsing/: input_type.rs  lexing.rs
src/: main.rs  ui.rs
