[package]
authors = ["AngelOfSol <julietckilian@gmail.com>"]
edition = "2018"
name = "ws_engine_dynamic_language"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcstr = {version = "1.1.0", features = ["substr"]}
bincode = "1.3.3"
chrono = "0.4.19"
egui = "0.13.1"
egui_demo_lib = "0.13.0"
egui_wgpu_backend = "0.10.0"
egui_winit_platform = "0.9.0"
epi = "0.13.0"
futures-lite = "1.12.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
rules = {path = "./rules"}
serde = {version = "1.0.126", features = ["derive"]}
strum = "0.21.0"
wgpu = "0.9.0"
winit = "0.25.0"
