[package]
authors = ["AngelOfSol <julietckilian@gmail.com>"]
edition = "2018"
name = "rules"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
maplit = "1.0.2"
nom = "6.2.1"
serde = {version = "1.0.126", features = ["derive"]}
slab = "0.4.3"
strum = {version = "0.21.0", features = ["derive"]}
thiserror = "1.0.25"
