[package]
authors = ["AngelOfSol <julietckilian@gmail.com>"]
edition = "2018"
name = "rules"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcstr = {version = "1.0.0", features = ["substr"]}
derivative = "2.2.0"
lazy_static = "1.4.0"
log = "0.4.14"
maplit = "1.0.2"
nom = "6.2.1"
nom_locate = {path = "../../nom_locate"}
serde = {version = "1.0.126", features = ["derive"]}
slab = "0.4.3"
strum = {version = "0.21.0", features = ["derive"]}
thiserror = "1.0.25"
